# VisionTransformers

./: Dockerfile  README.md  pyproject.toml  requirements-inference.txt  requirements.txt
configs/: config.yaml
src/: __init__.py  data.py  explain.py  export_onnx.py  model.py  predict.py  quantize_onnx.py  train.py
