[project]
name = "neu-defect-classifier"
version = "1.0.0"
description = "Vision Transformer pipeline for steel surface defect classification with ONNX export"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
